# djangopackages

./: .codespellignore  .coveragerc  .dockerignore  .editorconfig  .env.local.example  .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  CONTRIBUTORS.txt  Dockerfile  LICENSE.txt  Makefile  ProcFile  Procfile  README.md  README.rst  SSL.rst  __init__.py  article.rst  backup.db  bumpver.toml  compose.prod.yml  compose.yml  conftest.py  dev.yml  djangozoom.py  docker-compose-db.yml  docker-compose.dev.yml  docker-compose.override.yml-dist  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  (+30 more)
.devcontainer/: Dockerfile  compose.yml  create_dot_env.sh  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  CONTRIBUTORS-template.md  FUNDING.yml  contributors.json  dependabot.yml
apiv1/: __init__.py  api.py  models.py  resources.py
apiv3/: resources.py  urls.py  views.py
apiv4/: mixins.py  serializers.py  urls.py  viewsets.py
banners/: admin.py  apps.py  cache.py  context_processors.py  models.py  signals.py  urls.py  views.py
bitbucket/: models.py  tests.py  views.py
blog/: admin.py  feeds.py  managers.py  models.py  sitemaps.py  urls.py  views.py
classifiers/: admin.py  apps.py  models.py
core/: __init__.py  apiv1.py  apiv2.py  cachekeys.py  context_processors.py  decorators.py  fields.py  middleware.py  models.py  restconsumer.py  settings.py  sitemaps.py  utils.py
coverage/: .gitignore
deploy/: django_oc.wsgi  pinax.wsgi  plone_oc.wsgi  pyramid_oc.wsgi
design/: download_icon.psd
docs/: CHANGELOG.txt  api_docs.rst  api_v2_docs.rst  apiv3_docs.md  apiv3_docs.rst  celery.rst  conf.py  contributing.md  contributing.rst  contributors.rst  credits.rst  database.rst  db_long_version.rst  db_quickstart.rst  deployment.md  deployment.rst  faq.md  faq.rst  history.md  index.md  index.rst  install.md  install.rst  install_opinionated.md  introduction.md  introduction.rst  lessons_learned.md  lessons_learned.rst  license.md  license.rst  management_commands.md  management_commands.rst  mkdocs.yml  old_log.rst  opencomparison_settings.rst  opinionated_install.md  opinionated_install.rst  package_extenders.rst  packaginator_settings.rst  postgresql_contributor_instructions.rst  (+14 more)
favorites/: admin.py  apps.py  models.py  urls.py  views.py
favourites/: admin.py  apps.py  models.py
feeds/: __init__.py  feeds.py  urls.py
fixtures/: dumpdata_from_devdb.json.bz2  flatblocks.json  flatpages.json  initial_data.json  sanitized.json.bz2  sanitized.sql.bz2  test_initial_data.json  test_initial_pg_data.json
github/: models.py  tests.py  views.py
grid/: __init__.py  admin.py  apps.py  cache.py  cachekeys.py  context_processors.py  forms.py  models.py  signals.py  sitemaps.py  tables.py  tasks.py  urls.py  utils.py  views.py
homepage/: __init__.py  admin.py  models.py  views.py
importer/: LICENSE.txt  importers.py  urls.py  views.py
media/: pinax  uni_form
old_settings/: __init__.py  base.py  local_settings.py.example
opencomparison/: CHANGELOG.txt  testrunner.py  urls.py  wsgi.py
package/: admin.py  apiv2.py  apps.py  context_processors.py  forms.py  managers.py  models.py  pypi.py  scores.py  urls.py  (+8 more)
(+1042 files in other folders)
